<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exerciseTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="577dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/exercisePageTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FB0303"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exerciseStartButton"
        android:layout_width="211dp"
        android:layout_height="56dp"
        android:layout_marginBottom="524dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/exerciseStartButtonText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#FA3141"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseTextView" />

    <TextView
        android:id="@+id/countdownExerciseTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="464dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#0B0B0B"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseStartButton" />

    <TextView
        android:id="@+id/exerciseNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FD0303"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exerciseImageView"
        android:layout_width="402dp"
        android:layout_height="347dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="103dp"
        android:contentDescription="@string/exerciseImageContentDescription"
        app:layout_constraintBottom_toTopOf="@+id/countdownExerciseTextView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseStartButton" />

    <TextView
        android:id="@+id/initialCountdownTextView"
        android:layout_width="199dp"
        android:layout_height="167dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#070000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/getReadyTextView"
        android:layout_width="254dp"
        android:layout_height="63dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#00090B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/initialCountdownTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        tools:ignore="UnknownIdInLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mStepSkipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="339dp"
        android:layout_marginLeft="339dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/mindfulnessSkipButtonContentDesc"
        android:focusable="true"
        app:backgroundTint="#EE0014"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabSize="normal"
        app:hoveredFocusedTranslationZ="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yogaImageView"
        app:rippleColor="@android:color/holo_red_dark"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        app:tint="#FFFFFF"
        tools:ignore="UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>